--- a/Pipfile
+++ b/Pipfile
@@ -4,13 +4,8 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-docker = "==6.0.0"
-docker-compose = "==1.29.2"
-Flask = "==2.0.2"
-open-aea = {version = "==1.21.0.post1", extras = ["all"]}
-open-aea-ledger-ethereum = "==1.21.0"
-open-aea-cli-ipfs = "==1.21.0"
-Werkzeug= "==2.0.3"
+# we don't specify dependencies for the library here for intallation as per: https://pipenv-fork.readthedocs.io/en/latest/advanced.html#pipfile-vs-setuppy
+# aea/autonomy package dependencies are specified in their respective configuration yaml files and as dev dependencies below
 
 [dev-packages]
 ### package deps
@@ -20,19 +15,16 @@ asn1crypto = "==1.4.0"
 cosmpy = "==0.3.1"
 grpcio = "==1.43.0"
 hypothesis = "==6.21.6"
-joblib = "==1.1.0"
-# latest supported for Python 3.7
-numpy = "==1.21.6"
+open-aea = {version = "==1.21.0.post1", extras = ["all"]}
+open-aea-ledger-ethereum = "==1.21.0"
 open-aea-ledger-cosmos = "==1.21.0"
-pandas = "==1.3.5"
-pandas-stubs = "==1.2.0.62"
+open-aea-cli-ipfs = "==1.21.0"
+open-aea-test-autonomy = "==0.3.2"
+open-autonomy = {version = "==0.3.2", extras = [ "all"]}
 protobuf = "==3.19.4"
 pytz = "==2022.2.1"
 py-ecc = "==5.2.0"
 py-eth-sig-utils = "==0.4.0"
-# latest supported for Python 3.7
-scikit-learn = "==1.0.2"
-statsmodels = "==0.13.2"
 ### tests deps
 mistune = "==2.0.3"
 tomte = {version = "==0.1.5", extras = ["tox", "tests"]}
