chore: add missing tests in tox.ini

--- a/tox.ini
+++ b/tox.ini
@@ -70,9 +70,10 @@ commands =
     autonomy init --reset --author CI --remote --ipfs --ipfs-node "/dns/registry.autonolas.tech/tcp/443/https"
     autonomy packages sync
 
-[commands-skills]
+[commands-packages]
 commands =
     {[commands-base]commands}
+    pytest -rfE packages/valory/contracts/offchain_aggregator/tests --cov=packages/valory/contracts/offchain_aggregator --cov-report=xml --cov-report=term --cov-report=term-missing --cov-config=.coveragerc {posargs}
     pytest -rfE packages/valory/skills/oracle_abci/tests --cov=packages/valory/skills/oracle_abci --cov-report=xml --cov-report=term --cov-report=term-missing --cov-config=.coveragerc {posargs}
     pytest -rfE packages/valory/skills/oracle_deployment_abci/tests --cov=packages/valory/skills/oracle_deployment_abci --cov-report=xml --cov-report=term --cov-report=term-missing --cov-config=.coveragerc {posargs}
     pytest -rfE packages/valory/skills/price_estimation_abci/tests --cov=packages/valory/skills/price_estimation_abci --cov-report=xml --cov-report=term --cov-report=term-missing --cov-config=.coveragerc {posargs}
@@ -86,7 +87,7 @@ commands =
 basepython = python3.7
 platform=^linux$
 deps = {[testenv-multi-ubuntu]deps}
-commands = {[commands-skills]commands}
+commands = {[commands-packages]commands}
 
 [testenv:e2e-py3.7-linux]
 basepython = python3.7
@@ -98,7 +99,7 @@ commands = {[commands-e2e]commands}
 basepython = python3.8
 platform=^linux$
 deps = {[testenv-multi-ubuntu]deps}
-commands = {[commands-skills]commands}
+commands = {[commands-packages]commands}
 
 [testenv:e2e-py3.8-linux]
 basepython = python3.8
@@ -110,7 +111,7 @@ commands = {[commands-e2e]commands}
 basepython = python3.9
 platform=^linux$
 deps = {[testenv-multi-ubuntu]deps}
-commands = {[commands-skills]commands}
+commands = {[commands-packages]commands}
 
 [testenv:e2e-py3.9-linux]
 basepython = python3.9
@@ -122,7 +123,7 @@ commands = {[commands-e2e]commands}
 basepython = python3.10
 platform=^linux$
 deps = {[testenv-multi-ubuntu]deps}
-commands = {[commands-skills]commands}
+commands = {[commands-packages]commands}
 
 [testenv:e2e-py3.10-linux]
 basepython = python3.10
@@ -134,7 +135,7 @@ commands = {[commands-e2e]commands}
 basepython = python3.7
 platform=^win32$
 deps = {[testenv-multi-win]deps}
-commands = {[commands-skills]commands}
+commands = {[commands-packages]commands}
 
 [testenv:e2e-py3.7-win]
 basepython = python3.7
@@ -146,7 +147,7 @@ commands = {[commands-e2e]commands}
 basepython = python3.8
 platform=^win32$
 deps = {[testenv-multi-win]deps}
-commands = {[commands-skills]commands}
+commands = {[commands-packages]commands}
 
 [testenv:e2e-py3.8-win]
 basepython = python3.8
@@ -158,7 +159,7 @@ commands = {[commands-e2e]commands}
 basepython = python3.9
 platform=^win32$
 deps = {[testenv-multi-win]deps}
-commands = {[commands-skills]commands}
+commands = {[commands-packages]commands}
 
 [testenv:e2e-py3.9-win]
 basepython = python3.9
@@ -170,7 +171,7 @@ commands = {[commands-e2e]commands}
 basepython = python3.10
 platform=^win32$
 deps = {[testenv-multi-win]deps}
-commands = {[commands-skills]commands}
+commands = {[commands-packages]commands}
 
 [testenv:e2e-py3.10-win]
 basepython = python3.10
@@ -182,7 +183,7 @@ commands = {[commands-e2e]commands}
 basepython = python3.7
 platform=^darwin$
 deps = {[testenv-multi-darwin]deps}
-commands = {[commands-skills]commands}
+commands = {[commands-packages]commands}
 
 [testenv:e2e-py3.7-darwin]
 basepython = python3.7
@@ -194,7 +195,7 @@ commands = {[commands-e2e]commands}
 basepython = python3.8
 platform=^darwin$
 deps = {[testenv-multi-darwin]deps}
-commands = {[commands-skills]commands}
+commands = {[commands-packages]commands}
 
 [testenv:e2e-py3.8-darwin]
 basepython = python3.8
@@ -206,7 +207,7 @@ commands = {[commands-e2e]commands}
 basepython = python3.9
 platform=^darwin$
 deps = {[testenv-multi-darwin]deps}
-commands = {[commands-skills]commands}
+commands = {[commands-packages]commands}
 
 [testenv:e2e-py3.9-darwin]
 basepython = python3.9
@@ -218,7 +219,7 @@ commands = {[commands-e2e]commands}
 basepython = python3.10
 platform=^darwin$
 deps = {[testenv-multi-darwin]deps}
-commands = {[commands-skills]commands}
+commands = {[commands-packages]commands}
 
 [testenv:e2e-py3.10-darwin]
 basepython = python3.10
