--- a/packages/valory/skills/oracle_abci/skill.yaml
+++ b/packages/valory/skills/oracle_abci/skill.yaml
@@ -141,6 +141,7 @@ models:
       headers: []
       method: GET
       parameters: []
+      response_index: null
       response_key: data:amount
       response_type: float
       retries: 5
