fix: remove parameters from the url
This is causing duplication of the parameters, since we are also defining them in the `parameters` configuration as we should.

--- a/packages/valory/services/oracle_ropsten/service.yaml
+++ b/packages/valory/services/oracle_ropsten/service.yaml
@@ -48,7 +48,7 @@ models:
   1:
   - price_api:
       args:
-        url: https://api.kraken.com/0/public/Ticker?pair=BTCUSD
+        url: https://api.kraken.com/0/public/Ticker
         api_id: kraken
         parameters:
         - - pair
