fix: breaking changes from `autonomy` bump `0.3.5 -> 0.4.0`
https://github.com/valory-xyz/open-autonomy/blob/6214f37be56fd6bbd19790db38cd222540354295/HISTORY.md

--- a/packages/valory/skills/oracle_abci/fsm_specification.yaml
+++ b/packages/valory/skills/oracle_abci/fsm_specification.yaml
@@ -20,7 +20,7 @@ alphabet_in:
 - VALIDATE_TIMEOUT
 default_start_state: RegistrationStartupRound
 final_states: []
-label: packages.valory.skills.oracle_abci.composition.OracleAbciApp
+label: OracleAbciApp
 start_states:
 - RegistrationStartupRound
 states:
