fix: use `allowlist_externals` for external scripts in tox

--- a/tox.ini
+++ b/tox.ini
@@ -275,15 +275,15 @@ commands =
 skipsdist = True
 skip_install = True
 deps =
-commands =
-    {toxinidir}/scripts/check_copyright.py --check
+allowlist_externals = {toxinidir}/scripts/check_copyright.py
+commands = {toxinidir}/scripts/check_copyright.py --check
 
 [testenv:fix-copyright]
 skipsdist = True
 skip_install = True
 deps =
-commands =
-    {toxinidir}/scripts/check_copyright.py
+allowlist_externals = {toxinidir}/scripts/check_copyright.py
+commands = {toxinidir}/scripts/check_copyright.py
 
 [testenv:check-hash]
 skipsdist = True
@@ -307,8 +307,8 @@ commands =
 skipsdist = True
 usedevelop = True
 deps =
-commands =
-    {toxinidir}/scripts/check_pipfiles.py
+allowlist_externals = {toxinidir}/scripts/check_pipfiles.py
+commands = {toxinidir}/scripts/check_pipfiles.py
 
 [testenv:flake8]
 skipsdist = True
@@ -346,10 +346,9 @@ commands =
 [testenv:vulture]
 skipsdist = True
 skip_install = True
-deps =
-    tomte[vulture]==0.1.5
-commands =
-    vulture scripts/whitelist.py
+deps = tomte[vulture]==0.1.5
+allowlist_externals = vulture scripts/whitelist.py
+commands = vulture scripts/whitelist.py
 
 [testenv:darglint]
 skipsdist = True
@@ -374,8 +373,8 @@ whitelist_externals = mdspell
 skipsdist = True
 usedevelop = True
 deps =
-commands =
-    {toxinidir}/scripts/spell-check.sh
+allowlist_externals = {toxinidir}/scripts/spell-check.sh
+commands = {toxinidir}/scripts/spell-check.sh
 
 [testenv:abci-docstrings]
 skipsdist = True
