--- a/Pipfile
+++ b/Pipfile
@@ -19,8 +19,8 @@ open-aea = {version = "==1.25.0", extras = ["all"]}
 open-aea-ledger-ethereum = "==1.25.0"
 open-aea-ledger-cosmos = "==1.25.0"
 open-aea-cli-ipfs = "==1.25.0"
-open-aea-test-autonomy = "==0.5.0"
-open-autonomy = {version = "==0.5.0", extras = [ "all"]}
+open-aea-test-autonomy = "==0.5.0.post1"
+open-autonomy = {version = "==0.5.0.post1", extras = [ "all"]}
 protobuf = "==3.19.4"
 pytz = "==2022.2.1"
 py-ecc = "==5.2.0"
