--- a/Pipfile
+++ b/Pipfile
@@ -15,7 +15,7 @@ asn1crypto = "==1.4.0"
 cosmpy = "==0.3.1"
 grpcio = "==1.43.0"
 hypothesis = "==6.21.6"
-open-aea = {version = "==1.25.0", extras = ["all"]}
+open-aea = {version = "==1.25.0.post1", extras = ["all"]}
 open-aea-ledger-ethereum = "==1.25.0"
 open-aea-ledger-cosmos = "==1.25.0"
 open-aea-cli-ipfs = "==1.25.0"
