--- a/Pipfile
+++ b/Pipfile
@@ -17,10 +17,10 @@ grpcio = "==1.43.0"
 hypothesis = "==6.21.6"
 open-aea = {version = "==1.25.0.post1", extras = ["all"]}
 open-aea-ledger-ethereum = "==1.25.0"
-open-aea-ledger-cosmos = "==1.25.0"
-open-aea-cli-ipfs = "==1.25.0"
-open-aea-test-autonomy = "==0.5.0.post1"
-open-autonomy = {version = "==0.5.0.post1", extras = [ "all"]}
+open-aea-ledger-cosmos = "==1.25.0.post1"
+open-aea-cli-ipfs = "==1.25.0.post1"
+open-aea-test-autonomy = "==0.5.0.post2"
+open-autonomy = {version = "==0.5.0.post2", extras = [ "all"]}
 protobuf = "==3.19.4"
 pytz = "==2022.2.1"
 py-ecc = "==5.2.0"
