refactor: remove the safe deployment abci

--- a/setup.cfg
+++ b/setup.cfg
@@ -8,7 +8,6 @@ exclude=.md,
     packages/valory/skills/abstract_round_abci,
     packages/valory/skills/registration_abci,
     packages/valory/skills/reset_pause_abci,
-    packages/valory/skills/safe_deployment_abci,
     packages/valory/skills/transaction_settlement_abci,
 max-line-length = 88
 select = B,C,D,E,F,I,W,
@@ -36,7 +35,7 @@ line_length=88
 order_by_type=False
 case_sensitive=True
 lines_after_imports=2
-skip=packages/valory/skills/abstract_abci,packages/valory/skills/abstract_round_abci,packages/valory/skills/registration_abci,packages/valory/skills/reset_pause_abci,packages/valory/skills/safe_deployment_abci,packages/valory/skills/transaction_settlement_abci
+skip=packages/valory/skills/abstract_abci,packages/valory/skills/abstract_round_abci,packages/valory/skills/registration_abci,packages/valory/skills/reset_pause_abci,packages/valory/skills/transaction_settlement_abci
 skip_glob =
 known_first_party=autonomy
 known_packages=packages
@@ -76,9 +75,6 @@ ignore_errors=True
 ignore_errors=True
 
 [mypy-packages.valory.skills.reset_pause_abci.*]
-ignore_errors=True
-
-[mypy-packages.valory.skills.safe_deployment_abci.*]
 ignore_errors=True
 
 [mypy-packages.valory.skills.transaction_settlement_abci.*]
