--- a/packages/valory/agents/oracle/aea-config.yaml
+++ b/packages/valory/agents/oracle/aea-config.yaml
@@ -71,7 +71,7 @@ dependencies:
   open-aea-ledger-cosmos: {}
   open-aea-ledger-ethereum: {}
   open-aea-test-autonomy:
-    version: ==0.5.0.post2
+    version: ==0.6.0
 skill_exception_policy: stop_and_exit
 connection_exception_policy: just_log
 default_connection: null
