--- a/packages/valory/skills/oracle_abci/fsm_specification.yaml
+++ b/packages/valory/skills/oracle_abci/fsm_specification.yaml
@@ -22,6 +22,7 @@ default_start_state: RegistrationStartupRound
 final_states: []
 label: OracleAbciApp
 start_states:
+- RegistrationRound
 - RegistrationStartupRound
 states:
 - CheckLateTxHashesRound
