--- a/packages/valory/agents/oracle/aea-config.yaml
+++ b/packages/valory/agents/oracle/aea-config.yaml
@@ -30,13 +30,13 @@ protocols:
 - valory/tendermint:0.1.0:bafybeihcnjhovvyyfbkuw5sjyfx2lfd4soeocfqzxz54g67333m6nk5gxq
 skills:
 - valory/abstract_abci:0.1.0:bafybeihkcgjgyoleu6jgwhpffkzvflmybajlz5k2fkxhl3nngbbo6xzlsy
-- valory/abstract_round_abci:0.1.0:bafybeifh4qtjurq5637ykxexzexca5l4n6t4ujw26tpnern2swajanvhny
-- valory/oracle_abci:0.1.0:bafybeibc3sm73bn4r5k43es67aybi7l76s5r7uqnyc7hsk26vwkjuoeozm
-- valory/oracle_deployment_abci:0.1.0:bafybeigyj6ivts3yd73jimjkydnaw36tg4cryri6i52j4mopengddtbbt4
-- valory/price_estimation_abci:0.1.0:bafybeigtlyqiytr74omm652vfkcepxemrn4ifgk7daiw4svsuywx6x6xti
-- valory/registration_abci:0.1.0:bafybeicuz3f4tvowd2xwcl5w4ck56rm5abfoyng3cmbprovpch4u6eexge
-- valory/reset_pause_abci:0.1.0:bafybeihlsjhy4dpiulgdof3noh6dlzvr6wkywcwbsrti45labn7htrfg3y
-- valory/transaction_settlement_abci:0.1.0:bafybeicvdtbelmvhabmrsyej4zh7gbl25vusxrpgapvdrtadwnerknlt6e
+- valory/abstract_round_abci:0.1.0:bafybeih65bcrqt5ckz53zupcvyw3aykgzoueh4fet345iyuvhq3l3ci2ge
+- valory/oracle_abci:0.1.0:bafybeidoubd2i44cvhs6bmpdgpx5fheypz5cd5sizyvadx5t3ckhoildzy
+- valory/oracle_deployment_abci:0.1.0:bafybeih44bkesuhiqio3no4gbhkg2zqudplod2ha7nidga7ujp34qz2kbi
+- valory/price_estimation_abci:0.1.0:bafybeiays4atrtb4tiapuo5qgxkok36odisnp5x2v5mk7qnlzbrw73cpoq
+- valory/registration_abci:0.1.0:bafybeidkd6zdq5ac6uqlh5dey7jm3mayx5vah5ekzaq334s2h5u6dy2vd4
+- valory/reset_pause_abci:0.1.0:bafybeidmobpacccq4tbxkwq4le6qlupehklw5vqjwflr7pguwve6h47r2q
+- valory/transaction_settlement_abci:0.1.0:bafybeiaanbylfu66kodfsgojxqwc2mtqc5gw6qta44bmyfwfabp7t5cexa
 default_ledger: ethereum
 required_ledgers:
 - ethereum
@@ -110,6 +110,7 @@ models:
         oracle_contract_address: ${SKILL_ORACLE_ABCI_MODELS_PARAMS_ARGS_SETUP_ORACLE_CONTRACT_ADDRESS:list:[]}
       round_timeout_seconds: ${ORACLE_PARAMS_ROUND_TIMEOUT_SECONDS:float:35.0}
       tendermint_url: ${TENDERMINT_URL:str:http://localhost:26657}
+      tendermint_p2p_url: ${str:localhost:26656}
       tendermint_com_url: ${TENDERMINT_COM_URL:str:http://localhost:8080}
       reset_tendermint_after: ${SKILL_ORACLE_ABCI_MODELS_PARAMS_ARGS_RESET_TENDERMINT_AFTER:int:10}
       observation_interval: ${SKILL_ORACLE_ABCI_MODELS_PARAMS_ARGS_OBSERVATION_INTERVAL:int:300}
